--- a/app/src/main/res/layout/activity_info_circuit.xml
+++ b/app/src/main/res/layout/activity_info_circuit.xml
@@ -9,30 +9,27 @@
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
-        android:layout_height="451dp"
+        android:layout_height="590dp"
         android:layout_marginTop="32dp"
-        android:background="@color/black"
+        android:background="#E6000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textplacecircuit" />
 
     <ListView
         android:id="@+id/list_InfoCircuits"
-        android:layout_width="match_parent"
-        android:layout_height="352dp"
-        android:layout_marginTop="132dp"
+        android:layout_width="416dp"
+        android:layout_height="233dp"
+        android:layout_marginTop="204dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textnamecircuit">
-
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/textnamecircuit" />
 
     <TextView
         android:id="@+id/textnamecircuit"
         android:layout_width="221dp"
         android:layout_height="28dp"
         android:layout_marginTop="68dp"
-        android:paddingLeft="20dp"
         android:text="circuit name"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -46,7 +43,6 @@
         android:layout_width="221dp"
         android:layout_height="28dp"
         android:layout_marginTop="96dp"
-        android:paddingLeft="20dp"
         android:text="circuit place"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -59,8 +55,8 @@
         android:id="@+id/btnback4"
         android:layout_width="79dp"
         android:layout_height="43dp"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@color/red"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="@color/white"
         android:shadowColor="@color/black"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,5 +102,61 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="256dp"
+        android:gravity="center"
+        android:text="Position"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="256dp"
+        android:gravity="center"
+        android:text="Firstname"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginTop="256dp"
+        android:gravity="center"
+        android:text="Lastname"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="335dp"
+        android:layout_marginTop="256dp"
+        android:gravity="center"
+        android:text="Points"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
