--- a/app/src/main/res/layout/textviewlayout_driverresultrace.xml
+++ b/app/src/main/res/layout/textviewlayout_driverresultrace.xml
@@ -39,11 +39,23 @@
         android:id="@+id/textViewDriverFirstname"
         android:layout_width="122dp"
         android:layout_height="25dp"
-        android:layout_marginStart="73dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="12dp"
         android:text="Firstname"
-        android:textSize="20sp"
         android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView_universal2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewPoints"
+        android:layout_width="51dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginTop="12dp"
+        android:text="Points"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView_universal2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,11 +63,11 @@
         android:id="@+id/textViewDriverLastname"
         android:layout_width="122dp"
         android:layout_height="25dp"
-        android:layout_marginStart="216dp"
+        android:layout_marginStart="210dp"
         android:layout_marginTop="12dp"
         android:text="Lastname"
-        android:textSize="20sp"
         android:textColor="@color/white"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView_universal2"
         app:layout_constraintTop_toTopOf="@+id/textView_universal2" />
